Update Internet Platforms with Claude agents, move Jina to Chatbox

--- a/index.html
+++ b/index.html
@@ -425,20 +425,20 @@
                             <div class="feature-title">💬 Chatbox + Selector de Modelo</div>
                         </div>
                         <div class="status-group">
-                            <span class="status-badge status-working">✓ FUNCIONAL</span>
+                            <span class="status-badge status-enhanced">✓ MEJORADO</span>
                             <svg class="expand-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
                             </svg>
                         </div>
                     </div>
                     <div class="feature-summary">
-                        6 modelos AI disponibles • Multi-threading • Persistencia completa
+                        6 modelos core + Jina AI Research • Multi-threading • Búsqueda masiva
                     </div>
                 </div>
                 <div class="feature-content">
                     <div class="feature-details">
                         <div class="visual-example">
-                            <div class="visual-title">Ejemplo de Interfaz</div>
+                            <div class="visual-title">Modelos de Research Disponibles</div>
                             <div class="mockup-container">
                                 <div style="padding: 1rem; border-bottom: 1px solid rgba(100, 116, 139, 0.2);">
                                     <select style="background: rgba(139, 92, 246, 0.1); border: 1px solid rgba(139, 92, 246, 0.3); padding: 0.5rem; border-radius: 6px; color: #A78BFA; width: 100%;">
@@ -448,6 +448,7 @@
                                         <option>✨ O4 Mini Deep Research</option>
                                         <option>🌐 Perplexity Sonar</option>
                                         <option>🌐 Perplexity Sonar Pro</option>
+                                        <option style="background: rgba(34, 197, 94, 0.2);">🔍 Jina AI Ultimate (100+ URLs)</option>
                                     </select>
                                 </div>
                                 <div style="padding: 1rem;">
@@ -462,12 +463,21 @@
                         </div>
                         <div class="detail-grid">
                             <div class="detail-box">
-                                <div class="detail-title">Características</div>
+                                <div class="detail-title">Modelos Core</div>
                                 <ul class="checklist">
-                                    <li><span class="check-yes">✓</span> Chat persistente con historiales</li>
-                                    <li><span class="check-yes">✓</span> Pairing inteligente de modelos</li>
-                                    <li><span class="check-yes">✓</span> Respuestas en streaming</li>
-                                    <li><span class="check-yes">✓</span> Multi-threading simultáneo</li>
+                                    <li><span class="check-yes">✓</span> Multi-Source Search</li>
+                                    <li><span class="check-yes">✓</span> Social Media Hunt</li>
+                                    <li><span class="check-yes">✓</span> O3/O4 Deep Research</li>
+                                    <li><span class="check-yes">✓</span> Perplexity Sonar/Pro</li>
+                                </ul>
+                            </div>
+                            <div class="detail-box" style="background: rgba(34, 197, 94, 0.1); border-color: rgba(34, 197, 94, 0.3);">
+                                <div class="detail-title" style="color: #10B981;">+ Sistema Aislado</div>
+                                <ul class="checklist">
+                                    <li><span class="check-yes">✓</span> <strong>Jina AI Research</strong></li>
+                                    <li><span class="check-yes">✓</span> Búsqueda masiva (100+ URLs)</li>
+                                    <li><span class="check-yes">✓</span> DeepSearch multi-fuente</li>
+                                    <li><span class="check-yes">✓</span> Integrable como modelo adicional</li>
                                 </ul>
                             </div>
                         </div>
@@ -608,17 +618,17 @@
                     <div class="feature-top">
                         <div class="feature-title-group">
                             <div class="feature-number">4</div>
-                            <div class="feature-title">🌐 Internet Platforms + Búsqueda Masiva</div>
+                            <div class="feature-title">🌐 Internet Platforms + Agentes Autónomos</div>
                         </div>
                         <div class="status-group">
-                            <span class="status-badge status-enhanced">✓ MEJORADO</span>
+                            <span class="status-badge status-enhanced">✓ COMPLETO</span>
                             <svg class="expand-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
                             </svg>
                         </div>
                     </div>
                     <div class="feature-summary">
-                        Social Media Hunt funcional • Jina AI agregado con 100+ URLs por búsqueda
+                        Social Media Hunt • Sistema Agéntico Claude SDK • Research Agents Python
                     </div>
                 </div>
                 <div class="feature-content">
@@ -632,21 +642,60 @@
                                     <li><span class="check-no">✗</span> Similarweb (no implementado)</li>
                                 </ul>
                             </div>
-                            <div class="detail-box" style="background: rgba(34, 197, 94, 0.1); border-color: rgba(34, 197, 94, 0.3);">
-                                <div class="detail-title" style="color: #10B981;">+ Sistema Aislado</div>
+                            <div class="detail-box" style="background: rgba(139, 92, 246, 0.1); border-color: rgba(139, 92, 246, 0.3);">
+                                <div class="detail-title" style="color: #A78BFA;">+ Claude SDK Agents</div>
                                 <ul class="checklist">
-                                    <li><span class="check-yes">✓</span> <strong>Jina AI Research</strong></li>
-                                    <li><span class="check-yes">✓</span> 100+ URLs por búsqueda</li>
-                                    <li><span class="check-yes">✓</span> DeepSearch multi-fuente</li>
-                                    <li><span class="check-yes">✓</span> Metadatos completos</li>
+                                    <li><span class="check-yes">✓</span> <strong>@anthropic-ai/claude-code SDK</strong></li>
+                                    <li><span class="check-yes">✓</span> SRE Incident Response Agent</li>
+                                    <li><span class="check-yes">✓</span> Security Audit Agent</li>
+                                    <li><span class="check-yes">✓</span> Research Analysis Agent</li>
+                                    <li><span class="check-yes">✓</span> Code Review Agent</li>
+                                    <li><span class="check-yes">✓</span> Tools: Bash, Read, Write, WebSearch</li>
                                 </ul>
+                            </div>
+                            <div class="detail-box" style="background: rgba(34, 197, 94, 0.1); border-color: rgba(34, 197, 94, 0.3);">
+                                <div class="detail-title" style="color: #10B981;">+ Research Agents Python</div>
+                                <ul class="checklist">
+                                    <li><span class="check-yes">✓</span> <strong>Enhanced Research Agent</strong></li>
+                                    <li><span class="check-yes">✓</span> MCP Integration</li>
+                                    <li><span class="check-yes">✓</span> Unlimited filesystem output</li>
+                                    <li><span class="check-yes">✓</span> SQLite database tracking</li>
+                                    <li><span class="check-yes">✓</span> Workspace management</li>
+                                    <li><span class="check-yes">✓</span> Specialized agents por tarea</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="visual-example">
+                            <div class="visual-title">Sistema Agéntico Multi-Nivel</div>
+                            <div class="flow-diagram">
+                                <div class="flow-step">
+                                    🎯 Task
+                                    <div style="font-size: 0.75rem; color: #94A3B8;">Research Request</div>
+                                </div>
+                                <div class="flow-arrow">→</div>
+                                <div class="flow-step" style="background: rgba(139, 92, 246, 0.2); border-color: rgba(139, 92, 246, 0.5);">
+                                    🤖 Claude SDK
+                                    <div style="font-size: 0.75rem; color: #A78BFA;">Orchestrator</div>
+                                </div>
+                                <div class="flow-arrow">→</div>
+                                <div class="flow-step">
+                                    🔧 Tools
+                                    <div style="font-size: 0.75rem; color: #94A3B8;">Bash, Web, Files</div>
+                                </div>
+                                <div class="flow-arrow">→</div>
+                                <div class="flow-step" style="background: rgba(34, 197, 94, 0.2); border-color: rgba(34, 197, 94, 0.5);">
+                                    📝 Output
+                                    <div style="font-size: 0.75rem; color: #10B981;">Unlimited</div>
+                                </div>
                             </div>
                         </div>
                         <div class="isolated-addition">
                             <div class="isolated-title">
-                                🚀 Con Jina AI Integration
+                                🚀 Sistema Agéntico Completo Implementado
                             </div>
-                            <p>Búsqueda masiva implementada: Una query puede retornar 100+ fuentes relevantes con metadata completa (título, descripción, fecha, autor)</p>
+                            <p><strong>Claude SDK Agents:</strong> Sistema profesional con herramientas reales y capacidades autónomas usando @anthropic-ai/claude-code</p>
+                            <p><strong>Python Research Agents:</strong> Agentes especializados con output ilimitado a filesystem, sin restricciones de chat</p>
+                            <p style="margin-top: 0.5rem; color: #A78BFA;">Puerto 3456 (SDK) • Workspace management • Database tracking • Multi-agent orchestration</p>
                         </div>
                     </div>
                 </div>
